<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="16dp">

    <TextView
        android:id="@+id/playerChoiceTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/my_step_text"
        style="@style/TextStyle"
        android:layout_marginBottom="36dp" />

    <TextView
        android:id="@+id/robotChoiceTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bot_step_text"
        style="@style/TextStyle"
        android:layout_marginBottom="36dp" />

    <TextView
        android:id="@+id/resultTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/result_text"
        style="@style/TextStyle"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="36dp" />

    <Button
        android:id="@+id/backButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/ButtonStyle"
        android:text="@string/back_text"
        android:layout_marginBottom="36dp" />

</LinearLayout>