<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/TextStyle"
        android:text="@string/main_text"
        android:textColor="@color/text_color"
        android:layout_marginBottom="32dp" />

    <Button
        android:id="@+id/rockbutton"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:text="@string/rock_button_text"
        style="@style/ButtonStyle"
        android:layout_marginBottom="32dp" />

    <Button
        android:id="@+id/scissorsbutton"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:text="@string/scissors_button_text"
        style="@style/ButtonStyle"
        android:layout_marginBottom="32dp" />

    <Button
        android:id="@+id/paperbutton"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:text="@string/paper_button_text"
        style="@style/ButtonStyle" />

</LinearLayout>